<?xml version="1.0" encoding="utf-8"?>
<com.flass.layoutinspect.hook.view.MyLinearLayout android:orientation="vertical" android:background="#a6000000" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.flass.layoutinspect.hook.view.MyRelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.flass.layoutinspect.hook.view.MyTextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/li_target_object" android:layout_centerInParent="true" />
        <com.flass.layoutinspect.hook.view.MyImageView android:id="@id/close" android:background="?android:selectableItemBackground" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/module_ic_close_24px" android:tint="@android:color/white" android:layout_alignParentEnd="true" />
    </com.flass.layoutinspect.hook.view.MyRelativeLayout>
    <include layout="@layout/module_divider_horizontal" />
    <com.flass.layoutinspect.hook.view.MyTextView android:textSize="14.0sp" android:gravity="center" android:id="@id/clazz" android:background="?android:selectableItemBackground" android:paddingLeft="12.0dip" android:paddingTop="10.0dip" android:paddingRight="12.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="12.0dip" android:paddingVertical="10.0dip" />
    <include layout="@layout/module_divider_horizontal" />
    <com.flass.layoutinspect.hook.view.MyEditText android:textSize="14.0sp" android:gravity="center" android:id="@id/input" android:background="@android:color/transparent" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="搜索" android:singleLine="true" />
    <include layout="@layout/module_divider_horizontal" />
    <com.flass.layoutinspect.hook.view.MyHorizontalScrollView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.flass.layoutinspect.hook.view.MyLinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.flass.layoutinspect.hook.view.MyButton android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/member_fields" android:background="@drawable/module_bg_selectable_normal_view" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/li_fields" android:paddingHorizontal="20.0dip" android:paddingVertical="10.0dip" />
            <include layout="@layout/module_divider_vertical" />
            <com.flass.layoutinspect.hook.view.MyButton android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/member_constructors" android:background="@drawable/module_bg_selectable_normal_view" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/li_constructors" android:paddingHorizontal="20.0dip" android:paddingVertical="10.0dip" />
            <include layout="@layout/module_divider_vertical" />
            <com.flass.layoutinspect.hook.view.MyButton android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/member_methods" android:background="@drawable/module_bg_selectable_normal_view" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/li_methods" android:paddingHorizontal="20.0dip" android:paddingVertical="10.0dip" />
            <include layout="@layout/module_divider_vertical" />
            <com.flass.layoutinspect.hook.view.MyButton android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/member_superClasses" android:background="@drawable/module_bg_selectable_normal_view" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/li_parent_class" android:paddingHorizontal="20.0dip" android:paddingVertical="10.0dip" />
            <include layout="@layout/module_divider_vertical" />
            <com.flass.layoutinspect.hook.view.MyButton android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/member_interfaces" android:background="@drawable/module_bg_selectable_normal_view" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/li_interfaces" android:paddingHorizontal="20.0dip" android:paddingVertical="10.0dip" />
            <include layout="@layout/module_divider_vertical" />
            <com.flass.layoutinspect.hook.view.MyButton android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/member_innerClasses" android:background="@drawable/module_bg_selectable_normal_view" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/li_inner_classes" android:paddingHorizontal="20.0dip" android:paddingVertical="10.0dip" />
        </com.flass.layoutinspect.hook.view.MyLinearLayout>
    </com.flass.layoutinspect.hook.view.MyHorizontalScrollView>
    <include layout="@layout/module_divider_horizontal" />
    <com.flass.layoutinspect.hook.view.MyListView android:id="@id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="#4dffffff" android:dividerHeight="1.0dip" />
    <include android:visibility="gone" layout="@layout/module_tip" />
</com.flass.layoutinspect.hook.view.MyLinearLayout>
