<?xml version="1.0" encoding="utf-8"?>
<com.flass.layoutinspect.hook.view.MyLinearLayout android:orientation="vertical" android:background="#a6000000" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.flass.layoutinspect.hook.view.MyRelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.flass.layoutinspect.hook.view.MyTextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/li_app_process" android:layout_centerInParent="true" />
        <com.flass.layoutinspect.hook.view.MyImageView android:id="@id/close" android:background="?android:selectableItemBackground" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/module_ic_close_24px" android:tint="@android:color/white" android:layout_alignParentEnd="true" />
    </com.flass.layoutinspect.hook.view.MyRelativeLayout>
    <include layout="@layout/module_divider_horizontal" />
    <com.flass.layoutinspect.hook.view.MyLinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.flass.layoutinspect.hook.view.MyButton android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/process_current" android:background="@drawable/module_bg_selectable_normal_view" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="0.0dip" android:text="@string/li_current_process" android:layout_weight="1.0" android:paddingVertical="10.0dip" />
        <include layout="@layout/module_divider_vertical" />
        <com.flass.layoutinspect.hook.view.MyButton android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/process_more" android:background="@drawable/module_bg_selectable_normal_view" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="0.0dip" android:text="@string/li_more_processes" android:layout_weight="1.0" android:paddingVertical="10.0dip" />
    </com.flass.layoutinspect.hook.view.MyLinearLayout>
    <include layout="@layout/module_divider_horizontal" />
    <com.flass.layoutinspect.hook.view.MyScrollView android:id="@id/scroll" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.flass.layoutinspect.hook.view.MyTextView android:textSize="14.0sp" android:textColor="@android:color/white" android:paddingLeft="15.0dip" android:paddingTop="10.0dip" android:paddingRight="15.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lineSpacingMultiplier="1.2" android:textIsSelectable="true" android:paddingHorizontal="15.0dip" android:paddingVertical="10.0dip" />
    </com.flass.layoutinspect.hook.view.MyScrollView>
    <com.flass.layoutinspect.hook.view.MyListView android:id="@id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="#4dffffff" android:dividerHeight="1.0dip" />
</com.flass.layoutinspect.hook.view.MyLinearLayout>
